feat: Add TanStack Query caching, Zod validation, and code improvements
- Add TanStack Query for client-side data caching (5-min stale time)
- Create useQueries hooks for posts, connections, dashboard stats
- Convert Dashboard, Posts, Calendar, Settings pages to use cached queries
- Add Zod schemas for API input validation
- Add environment variable validation with type-safe accessors
- Create API middleware with auth and validation helpers
- Fix null safety issues for post.platforms across components
- Add GDPR-compliant account deletion endpoint
- Update dependencies to latest (React 19.2.3, Next 16.1.1, Supabase 2.89.0)
- Add GEMINI.md and agent workflows for AI assistance

--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@google/generative-ai": "^0.24.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.3",
+    "@tanstack/react-query": "^5.90.12",
     "next": "^16.1.0",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "server-only": "^0.0.1",
+    "zod": "^4.2.1"
   },
   "devDependencies": {
     "@types/node": "^20",
