--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^3.0.2",
     "@atproto/api": "^0.18.9",
     "@atproto/oauth-client-node": "^0.3.14",
     "@dnd-kit/core": "^6.3.1",
@@ -17,6 +18,7 @@
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.3",
     "@tanstack/react-query": "^5.90.12",
+    "ai": "^6.0.5",
     "jose": "^6.1.3",
     "lucide-react": "^0.562.0",
     "next": "^16.1.0",
